--- a/index.html
+++ b/index.html
@@ -2,9 +2,112 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="https://jornalromaria.com.br/uploads/imagens/gutters-are-the-padding.png">
+    <title>Lorem ipsum</title>
+    
+    <style>
+        *{
+            margin: 0%;
+            padding: 0%;
+        }
+        html{
+            background-color: darkgrey;
+        }
+        /*---------menu de navegação---------*/
+        nav{
+            margin: auto;
+            height: 65px;
+            width: 100%;
+            background-color: aliceblue;
+        }
+        img#logotipo{
+            width: 100px;
+            margin-right: 12%;
+        }
+        ul{
+            border: 2px;
+            border-color: #000;
+            margin: auto;
+        }
+        li{
+            margin-top: 20px;
+            padding: 2px;
+            display: inline-block;
+            margin-right: 10%;
+            
+        }
+        a.navecacao{
+            text-decoration:none;
+            text-transform: uppercase;
+        }
+        /*---------Fim do menu de navegação---------*/
+        h1{
+            text-align: center;
+        }
+        section{
+            margin: auto;
+            width: 75%;
+            padding: 0.5%;
+        }
+        img{
+            width: 45%;
+            float: left;
+            position: relative;
+            margin-right: 5px;
+        }
+        p{
+            text-indent: 35px;
+            text-align: justify;
+            position: relative;
+        }
+    </style>
+
 </head>
 <body>
-    <h1>teste de git</h1>
+    <nav>
+        <img id="logotipo" src="https://jornalromaria.com.br/uploads/imagens/gutters-are-the-padding.png"/>
+        <ul>
+            <li><a class="navecacao" href="#">Home</a></li>
+            <li><a class="navecacao" href="#">Home</a></li>
+            <li><a class="navecacao" href="#">Home</a></li>
+            <li><a class="navecacao" href="#">Home</a></li>
+        </ul>
+    </nav>
+    <section>
+        <br/><h1>LOREM IPSUM</h1><br/>
+        <article>
+            <img src="https://jornalromaria.com.br/uploads/imagens/gutters-are-the-padding.png"/>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ipsum culpa voluptatum quis consectetur velit dolor sequi magnam ea, dolorem veniam, repellat, eius esse! Eveniet quisquam eum quaerat harum itaque!
+            </p>
+        </article>
+    </section>
 </body>
 </html>
