--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0%;
         }
         html{
-            background-color: darkgrey;
+            background-color: #FFF;
         }
         /*---------menu de navegação---------*/
         nav{
