--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>ATALHOS</title>
   </head>
-  <body>
+  <body style="height: 100vh; width: 100%">
     <header>
       <div>
         <h2>Projeto</h2>
@@ -311,6 +311,11 @@
         </ul>
       </div>
     </header>
+    <iframe
+      src="BackGroundGradient.html"
+      frameborder="0"
+      style="height: 100%; width: 100%"
+    ></iframe>
     <!---
   <div class="backGround">
     <textarea cols="90" rows="10"></textarea>
