--- a/BackGroundGradient.html
+++ b/BackGroundGradient.html
@@ -67,7 +67,7 @@
           style="resize: none"
         ></textarea>
         <br />
-        <input type="color" name="box-color" id="box-color" />
+        <input type="color" name="box-color" id="box-color" checked />
         <br />
         <label for="horizontal">Horizontal</label><br />
         <input
