--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <link
       rel="icon"
       type="image/png"
@@ -335,6 +335,6 @@
     </div>
   -->
 
-    <script src="./js/script.js" defer></script>
+    <script src="./src/scripts/script.js" defer></script>
   </body>
 </html>
