--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./src/styles/style.css" />
+        <link rel="stylesheet" href="./src/styles/index.css" />
         <link
             rel="icon"
             type="image/png"
@@ -12,321 +12,13 @@
     </head>
     <body style="height: 100vh; width: 100%">
         <header>
-            <div>
-                <h2>Projeto</h2>
-
-                <a
-                    href="https://1marcosaquino.github.io/dev_in_training/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >github.io</a
-                >
-
-                <ul>
-                    <li class="titulo">
-                        PESQUISA
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://duckduckgo.com/?t=h_"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Duck Duck Go</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.google.com/?gws_rd=ssl"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Google</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.bing.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Microsoft Bing</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Tradutor
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://www.bing.com/translator"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Bing Tradutor</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Kenzie
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://canvas.kenzie.com.br/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Canvas Kenzie</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Rede Social
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://www.linkedin.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Linkedin</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Ferramentas
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://github.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >GITHUB</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.invertexto.com/contador-caracteres"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Contador de Caracteres</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://developer.mozilla.org/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >MDN</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.w3schools.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >w3schools</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://stackoverflow.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Stack Over Flow</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://en.wikipedia.org/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >EN wikipedia</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://favicon.io/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >FAVICON</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://yeun.github.io/open-color/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Open Color</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.invertexto.com/converter-imagem-em-texto"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Imagem para texto</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://www.cssmatic.com/box-shadow"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Box Shandow CSS</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://cssgradient.io/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >CSS Gradient</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://pixabay.com/pt/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Pixabay</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Jogos
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://www.codewars.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >CodeWars</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="http://flexboxfroggy.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Flexbox Froggy</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://mastery.games/post/flexboxzombies2/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Flexbox Zombies 2.0</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Tutorial
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://jtemporal.com/desfazendo-um-ou-mais-commits/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Desfazendo COMMIT's</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://rogerdudler.github.io/git-guide/index.pt_BR.html"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >GIT-guia prático</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li class="titulo">
-                        Google
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://meet.google.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Google Meet</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://fonts.google.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Google Fonts</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://mail.google.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Gmail</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://calendar.google.com/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Google Agenda</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <ul class="containerMenu"></ul>
         </header>
         <iframe
             src="BackGroundGradient.html"
             frameborder="0"
             style="height: 100%; width: 100%"
         ></iframe>
-        <!---
-  <div class="backGround">
-    <textarea cols="90" rows="10"></textarea>
-      <br />
-      <br />
-      <input class="cor1" type="color" />
-      <input class="cor2" type="color" />
-      <br />
-      <p>Valor deg</p>
-      <input class="deg" type="range" min="0" max="180" />
-      <br />
-      <p>Valor 1</p>
-      <input class="valor1" type="range" min="0" max="100" />
-      <br />
-      <p>Valor 2</p>
-      <input class="valor2" type="range" min="0" max="100" />
-    </div>
-  -->
-
-        <script src="./src/scripts/script.js" defer></script>
+        <script type="module" src="./src/scripts/index.js"></script>
     </body>
 </html>
