--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="containerMenu"></ul>
         </header>
         <iframe
-            src="BackGroundGradient.html"
+            src="Background_Color/index.html"
             frameborder="0"
             style="height: 100%; width: 100%"
         ></iframe>
