--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./src/styles/index.css" />
-        <link
-            rel="icon"
-            type="image/png"
-            href="https://conteudo-kenzie-fullstack.vercel.app/modulo_1/_entrega_sprint_1/img/favicon.jpeg"
-        />
+        <link rel="icon" type="image/png" href="./src/assets/logo.png" />
         <title>ATALHOS</title>
     </head>
     <body style="height: 100vh; width: 100%">
