--- a/index.html
+++ b/index.html
@@ -4,17 +4,122 @@
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./src/styles/index.css" />
         <link rel="icon" type="image/png" href="./src/assets/logo.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
         <title>ATALHOS</title>
     </head>
-    <body style="height: 100vh; width: 100%">
+    <body>
         <header>
             <ul class="containerMenu"></ul>
         </header>
-        <iframe
-            src="src/backgroundColor/index.html"
-            frameborder="0"
-            style="height: 100%; width: 100%"
-        ></iframe>
-        <script type="module" src="./src/scripts/index.js"></script>
+        <main class="container">
+            <aside class="coresContainer">
+                <h2 style="text-align: center">Background Gradient</h2>
+                <textarea id="backGround"></textarea>
+
+                <div class="cores">
+                    <label for="gradient-type">Radial</label>
+                    <input type="radio" name="gradient-type" id="radial" />
+
+                    <label for="gradient-type">Linear</label>
+                    <input
+                        type="radio"
+                        name="gradient-type"
+                        id="linear"
+                        checked
+                    />
+
+                    <label>DEG</label>
+                    <input id="deg" type="range" min="0" max="180" />
+                </div>
+
+                <p for="">Escolha as cores aqui!</p>
+                <div class="cores">
+                    <label>Cor 1</label>
+                    <input id="cor1" type="color" />
+                    <input id="valor1" type="range" min="0" max="100" />
+                </div>
+                <div class="cores">
+                    <label>Cor 2</label>
+                    <input id="cor2" type="color" />
+                    <input id="valor2" type="range" min="0" max="100" />
+                </div>
+            </aside>
+
+            <aside class="sombraContainer">
+                <h2 style="text-align: center">Box Shandow</h2>
+                <textarea id="bordas"></textarea>
+
+                <div class="sombra">
+                    <label for="horizontal"
+                        >Escolha a cor da sombra Aqui!</label
+                    >
+
+                    <input type="color" name="box-color" id="box-color" />
+                </div>
+
+                <div class="sombra">
+                    <label for="horizontal">Horizontal</label>
+                    <input
+                        min="-100"
+                        max="100"
+                        type="range"
+                        name="horizontal"
+                        id="horizontal"
+                    />
+                </div>
+
+                <div class="sombra">
+                    <label for="vertical">Vertical</label>
+                    <input
+                        min="-100"
+                        max="100"
+                        type="range"
+                        name="vertical"
+                        id="vertical"
+                    />
+                </div>
+
+                <div class="sombra">
+                    <label for="espalhar">Espalhar</label>
+                    <input
+                        min="0"
+                        max="100"
+                        type="range"
+                        name="tamanho"
+                        id="tamanho"
+                    />
+                </div>
+
+                <div class="sombra">
+                    <label for="tamanho">Tamanho</label>
+                    <input
+                        min="-100"
+                        max="100"
+                        type="range"
+                        name="espalhar"
+                        id="espalhar"
+                    />
+                </div>
+
+                <div class="sombra">
+                    <label for="opacidade">Opacidade</label>
+                    <input
+                        min="1"
+                        max="99"
+                        type="range"
+                        name="opacidade"
+                        id="opacidade"
+                    />
+                </div>
+            </aside>
+        </main>
+
+        <script type="module" src="src/scripts/script.js"></script>
+        <script type="module" src="src/scripts/index.js"></script>
     </body>
 </html>
